# mcp-samples

./: README.md  classify.md  main.py  pyproject.toml  server.py  test_rail.py  test_search_trains.py  test_train_api.py  weather_data_analysis.ipynb
data/: sample.parquet
examples/: bengaluru_weather.py
tools/: file_reader_tools.py  indian_railways_tools.py  research_tools.py  weather_tools.py
tools/papers/mcp/: papers_info.json
